messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
  labels:
    app: django-messaging
    version: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-messaging
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0       # Ensures no downtime
      maxSurge: 1             # Adds one extra pod during update
  template:
    metadata:
      labels:
        app: django-messaging
        version: blue
    spec:
      containers:
        - name: django-container
          image: your-dockerhub-username/django-messaging-app:2.0
          ports:
            - containerPort: 8000
