messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
      - name: django-messaging
        image: messaging-api  # Replace with your image
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
  - port: 80
    targetPort: 8000
